Name:             orchid-demo
Version:          0.0.8
Description:      Haskell Wiki Demo
Synopsis:         Haskell Wiki Demo
Category:         Network, Web
Cabal-version:    >= 1.6
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       sfvisser@cs.uu.nl
Build-Type:       Simple
Build-Depends:    base ==4.*,
                  salvia ==0.3.*,
                  Pipe ==2.1.*,
                  stm ==2.1.*,
                  salvia-extras ==0.3.*,
                  salvia-protocol ==0.1.*,
                  extensible-exceptions ==0.1.*,
                  orchid ==0.0.*,
                  network ==2.2.*

Data-Files:       data.zip

Executable:       orchid-demo
Main-is:          Demo.hs
GHC-Options:      -fglasgow-exts -threaded -Wall
HS-Source-Dirs:   src

